Update everything majorly: simplify procedures, increase overall speed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,24 @@
 {
+    "compileOnSave": false,
     "compilerOptions": {
         "target": "es5",
-        "sourceMap": true
+        "strictNullChecks": true,
+        "alwaysStrict": true,
+        "skipLibCheck": true,
+        "noUnusedParameters": false,
+        "noUnusedLocals": false,
+        "lib": [
+            "es5",
+            "dom",
+            "es2015.promise",
+            "es2015.collection",
+            "es2015.iterable"
+        ]
     },
     "exclude": [
-        "node_modules",
-        "bower_components"
+        "node_modules"
     ],
     "include": [
         "src"
-    ],
-    "compileOnSave" : false
+    ]
 }
