--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "engines": {
-    "node": ">= 0.10.0"
-  },
-  "devDependencies": {
-    "ava": "0.11.0",
-    "grunt": "^0.4.5",
-    "grunt-tslint": "^2.5.0",
-    "grunt-typescript": "^0.8.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-ava": "^0.5.0",
-    "grunt-ts": "^5.2.0",
-    "tslint": "^3.0.0",
-    "typescript": "^1.8.7"
-  },
-  "scripts": {
-    "test": "ava test/**/*Test.js"
-  }
+    "name": "abracadabra",
+    "version": "1 million",
+    "engines": {
+        "node": ">= 0.10.0"
+    },
+    "devDependencies": {
+        "ava": "^0.17.0",
+        "browserify": "^13.0.1",
+        "del": "^2.2.0",
+        "glob": "^7.0.4",
+        "gulp": "github:gulpjs/gulp#4.0",
+        "gulp-ava": "^0.15.0",
+        "gulp-buffer": "0.0.2",
+        "gulp-connect": "^5.0.0",
+        "gulp-sourcemaps": "^2.0.0-alpha",
+        "gulp-tap": "^0.1.3",
+        "gulp-tslint": "7.0.1",
+        "gulp-typescript": "^3.0.1",
+        "gulp-util": "^3.0.7",
+        "tslint": "^4.2.0",
+        "tslint-eslint-rules": "^3.2.3",
+        "typescript": "2.1.4"
+    },
+    "dependencies": {
+        "@types/node": "^6.0.46",
+        "@types/core-js": "^0.9.35"
+    },
+    "ava": {
+        "files": [
+            "build/**/*Test.js"
+        ]
+    }
 }
