--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
     "name": "abracadabra",
-    "version": "1 million",
+    "version": "0.0.1",
     "engines": {
         "node": ">= 0.10.0"
     },
     "devDependencies": {
-        "ava": "^0.17.0",
-        "browserify": "^13.0.1",
-        "del": "^2.2.0",
+        "@types/core-js": "^0.9.35",
+        "@types/node": "^8.0.10",
+        "ava": "^0.20.0",
+        "browserify": "^14.4.0",
+        "del": "^3.0.0",
         "glob": "^7.0.4",
         "gulp": "github:gulpjs/gulp#4.0",
-        "gulp-ava": "^0.15.0",
+        "gulp-ava": "^0.18.0",
         "gulp-buffer": "0.0.2",
         "gulp-connect": "^5.0.0",
         "gulp-sourcemaps": "^2.0.0-alpha",
-        "gulp-tap": "^0.1.3",
-        "gulp-tslint": "7.0.1",
+        "gulp-tap": "^1.0.1",
+        "gulp-tslint": "^8.1.1",
         "gulp-typescript": "^3.0.1",
         "gulp-util": "^3.0.7",
-        "tslint": "^4.2.0",
-        "tslint-eslint-rules": "^3.2.3",
-        "typescript": "2.1.4"
+        "tslint": "^5.5.0",
+        "tslint-eslint-rules": "^4.1.1",
+        "typescript": "^2.4.1"
     },
-    "dependencies": {
-        "@types/node": "^6.0.46",
-        "@types/core-js": "^0.9.35"
-    },
+    "dependencies": {},
     "ava": {
         "files": [
             "build/**/*Test.js"
